tests/csmith/bad/smith001896.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 1896
 * Seed:      1896
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
struct S1 {
   int64_t  f0;
    const uint64_t  f1;
    volatile uint64_t  f2;
    const int16_t  f3;
};

/* --- GLOBAL VARIABLES --- */
int32_t g_5 = 1L;
int32_t *g_4 = &g_5;
struct S1 g_8 = {0xB32A831D26EC17E5LL,6L,0xCE96B779C63C4078LL,0x8F9CL};/* VOLATILE GLOBAL g_8 */


/* --- FORWARD DECLARATIONS --- */
struct S1  func_1(void);
int32_t * func_2(int32_t * p_3);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_4 g_8
 * writes: g_4 g_5
 */
struct S1  func_1(void)
{ /* block id: 0 */
    int32_t **l_6 = 0;
    int32_t **l_7 = &g_4;
    (*l_7) = func_2(g_4);
    (**l_7) ^= 0x4B13281DL;
    return g_8;
}


/* ------------------------------------------ */
/* 
 * reads :
 * writes:
 */
int32_t * func_2(int32_t * p_3)
{ /* block id: 1 */
    return p_3;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_5 = %d\n", g_5);
    printf("checksum g_8.f0 = %d\n", g_8.f0);
    printf("checksum g_8.f1 = %d\n", g_8.f1);
    printf("checksum g_8.f2 = %d\n", g_8.f2);
    printf("checksum g_8.f3 = %d\n", g_8.f3);
}

/************************ statistics *************************
XXX max struct depth: 1
breakdown:
   depth: 0, occurrence: 4
   depth: 1, occurrence: 1

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 4

XXX total number of pointers: 4

XXX times a variable address is taken: 1
XXX times a pointer is dereferenced on RHS: 0
breakdown:
XXX times a pointer is dereferenced on LHS: 2
breakdown:
   depth: 1, occurrence: 1
   depth: 2, occurrence: 1
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 1

XXX max dereference level: 2
breakdown:
   level: 0, occurrence: 0
   level: 1, occurrence: 2
   level: 2, occurrence: 2
XXX number of pointers point to pointers: 2
XXX number of pointers point to scalars: 2
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 25
XXX average alias set size: 1

XXX times a non-volatile is read: 3
XXX times a non-volatile is write: 5
XXX times a volatile is read: 0
XXX    times read thru a pointer: 0
XXX times a volatile is write: 0
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 0
XXX percentage of non-volatile access: 100

XXX forward jumps: 0
XXX backward jumps: 0

XXX stmts: 6

XXX percentage a fresh-made variable is used: 66.7
XXX percentage an existing variable is used: 33.3
********************* end of statistics **********************/

